--- a/index.html
+++ b/index.html
@@ -398,8 +398,7 @@
                 <a href="https://github.com/Lulu-L2" class="item-folio__project-link" title="Project link" target="_blank"></a>
               </div>
               <div class="item-folio__text">
-                <h4 class="item-folio__title">Shutterbug</h4>
-                <p class="item-folio__cat">Branding</p>
+                <h4 class="item-folio__title">Predict Covid-19 Patient Growth</h4>
               </div>
               <div class="item-folio__caption">
                 <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
