--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
               </div>
             </div>
           </div>
-          <!-- end masonry__brick -->
+          end masonry__brick
 
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
