--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <h4 class="item-folio__title">Netflix Analyst</h4>
               </div>
               <div class="item-folio__caption">
-                <p>VAnalysis data in netflix dataset</p>
+                <p>Analysis data in netflix dataset</p>
               </div>
             </div>
           </div>
@@ -401,7 +401,7 @@
                 <h4 class="item-folio__title">Predict Covid-19 Patient Growth</h4>
               </div>
               <div class="item-folio__caption">
-                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                <p>Predict Covid-19 Patient Growth With Lagrange</p>
               </div>
             </div>
           </div>
@@ -426,6 +426,7 @@
           </div>
           <!-- end masonry__brick -->
 
+<!--           
           <!-- nglkk yg ini coba2 -->
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
@@ -444,7 +445,8 @@
               </div>
             </div>
           </div>
-          end masonry__brick
+          <!-- end masonry__brick -->
+ -->
 
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
