--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <a href="https://github.com/Lulu-L2" class="item-folio__project-link" title="Project link" target="_blank"></a>
               </div>
               <div class="item-folio__text">
-                <h4 class="item-folio__title">Predict Covid-19 Patient Growth</h4>
+                <h4 class="item-folio__title">Covid 19 Analyst</h4>
               </div>
               <div class="item-folio__caption">
                 <p>Predict Covid-19 Patient Growth With Lagrange</p>
