--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
             </p>
-            <div class="gambar"> 
+            <div class="gambar column medium-full wrap"> 
                 <img src="profil.jpeg" alt="" class="profil" />
             </div>
           </div>
@@ -398,7 +398,7 @@
                 <a href="https://github.com/Lulu-L2" class="item-folio__project-link" title="Project link" target="_blank"></a>
               </div>
               <div class="item-folio__text">
-                <h4 class="item-folio__title">Covid 19 Analyst</h4>
+                <h4 class="item-folio__title">Covid-19 Analyst</h4>
               </div>
               <div class="item-folio__caption">
                 <p>Predict Covid-19 Patient Growth With Lagrange</p>
@@ -424,29 +424,7 @@
               </div>
             </div>
           </div>
-          <!-- end masonry__brick -->
-
-<!--           
-          <!-- nglkk yg ini coba2 -->
-          <div class="masonry__brick" data-aos="fade-up">
-            <div class="item-folio">
-              <div class="item-folio__thumb">
-                <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="Guitarist" data-size="1050x700">
-                  <img src="images/portfolio/lamp.jpg" srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="" />
-                </a>
-                <a href="https://github.com/Lulu-L2" class="item-folio__project-link" title="Project link" target="_blank"></a>
-              </div>
-              <div class="item-folio__text">
-                <h4 class="item-folio__title">Lamp</h4>
-                <p class="item-folio__cat">Web Design</p>
-              </div>
-              <div class="item-folio__caption">
-                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-              </div>
-            </div>
-          </div>
-          <!-- end masonry__brick -->
- -->
+          <!-- end masonry__brick -->         
 
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
@@ -504,7 +482,7 @@
         <div class="column large-7 medium-full contact-social">
           <h4>Social</h4>
           <ul>
-            <li><a href="linkedin.com/in/yoga-fatwanto/" title="linkedin" target="_blank">Linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/yoga-fatwanto/" title="linkedin" target="_blank">Linkedin</a></li>
             <li><a href="https://www.instagram.com/yogafatwanto_99/" target="_blank" title="Instagram">Instagram</a></li>
           </ul>
         </div>
