--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
             </p>
-            <div class="gambar column medium-full wrap"> 
-                <img src="profil.jpeg" alt="" class="profil" />
+            <div class="gambar column medium-full masonry-wrap"> 
+                <img src="profil.jpeg" alt="" class="profil column medium-full" />
             </div>
           </div>
         </div>
