--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
             </p>
-                <img src="profil.jpeg" alt="" class="gambar-profil column medium-full" />
+            <div class="gambar">
+              <img src="profil.jpeg" alt="" class="gambar column medium-full" />
+            </div>
             </div>
           </div>
         </div>
