--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
             </p>
-            <div class="gambar">
-              <img src="profil.jpeg" alt="" class="gambar column medium-full" />
+            <div class="p_gambar">
+              <img src="profil.jpeg" alt="" />
             </div>
             </div>
           </div>
