--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
             </p>
-            <div class="p_gambar">
-              <img src="profil.jpeg" alt="" />
-            </div>
+                <img src="profil.jpeg" alt="" class="profil column medium-full" />
             </div>
           </div>
         </div>
