--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           </div>
           <!-- end masonry__brick -->
 
-          <div class="masonry__brick" data-aos="fade-up">
+          <!-- <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
               <div class="item-folio__thumb">
                 <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="Guitarist" data-size="1050x700">
@@ -422,10 +422,10 @@
                 <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- end masonry__brick -->         
 
-          <div class="masonry__brick" data-aos="fade-up">
+          <!-- <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
               <div class="item-folio__thumb">
                 <a href="images/portfolio/gallery/g-fuji.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
@@ -441,7 +441,7 @@
                 <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- end masonry__brick -->
         </div>
         <!-- end masonry -->
