--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
               well-organized, and disciplined person. study
               independently with 6+ months of python code.
               Have skills in data analyst term with 3+ months
-              experience with NumPy, pandas, and matplotlib,
-              understand the business cases flow, have good
-              communicative and willing to learn, willing to
-              work with team. Willing to sharing and learning
-              with the business analyst team. Can perform
+              experience with NumPy, pandas, and matplotlib, Can perform
               and create insightful and monitoring data to
               support and providing the right solutions to
               clients. Have interest in data analysis and make
@@ -120,7 +116,7 @@
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
             </p>
-                <img src="profil.jpeg" alt="" class="profil column medium-full" />
+                <img src="yoga.jpg" alt="" class="profil column medium-full" />
             </div>
           </div>
         </div>
