--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
               well-organized, and disciplined person. study
               independently with 6+ months of python code.
               Have skills in data analyst term with 3+ months
-              experience with NumPy, pandas, and matplotlib, Can perform
+              experience with NumPy, pandas, and matplotlib. Know how to perform
               and create insightful and monitoring data to
               support and providing the right solutions to
-              clients. Have interest in data analysis and make
+              the given data. Have interest in data analysis and make
               data visualization, currently learning about
               machine learning, and artificial intelligence.
               Want to be a master in data science field.
