--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         <div class="column item-service" data-aos="fade-up">
           <div class="item-service__content">
-            <h4 class="item-title">Data Analyisis</h4>
+            <h4 class="item-title">Data Analysis</h4>
             <p>
               Have completed some data analyst project.
             </p>
@@ -264,7 +264,7 @@
           <div class="item-service__content">
             <h4 class="item-title">Microsoft Excel</h4>
             <p>
-              Intermediate level skill of Microsoft Excel.
+              Basic to intermediate level skill of Microsoft Excel.
             </p>
           </div>
         </div>
