--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           <li>
             <a href="https://www.linkedin.com/in/yoga-fatwanto/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
           </li>
+          <li>
+            <a href="https://github.com/Lulu-L2" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+          </li>
         </ul>
       </nav>
 
@@ -153,26 +156,14 @@
                   <h3 class="item-title">University of Semarang</h3>
                   <h5>Informatics Engineering Degree</h5>
                 </div>
-                <!-- <div class="timeline__desc">
-                  <p>
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit
-                    dolor incididunt amet est occaecat nisi.
-                  </p>
-                </div> -->
-              </div>
+               
 
               <div class="timeline__block">
                 <div class="timeline__bullet"></div>
                 <div class="timeline__header">
                   <p class="timeline__timeframe">July 2017 - June 2020</p>
                   <h3 class="item-title">Public Senior High Scool 1 of Biak </h3>
-                  <!-- <h5>Frontend Developer</h5> -->
                 </div>
-                <!-- <div class="timeline__desc">
-                  <p>
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit
-                    dolor incididunt amet est occaecat nisi.
-                  </p> -->
                 </div>
              
 
@@ -181,14 +172,7 @@
                 <div class="timeline__header">
                   <p class="timeline__timeframe">July 2014 - June 2017</p>
                   <h3 class="item-title">Public Junior High School 1 of Biak</h3>
-                  <!-- <h5>Frontend Developer</h5> -->
                 </div>
-                <!-- <div class="timeline__desc">
-                  <p>
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit
-                    dolor incididunt amet est occaecat nisi.
-                  </p>
-                </div> -->
               </div>
 
               <div class="timeline__block">
@@ -196,14 +180,7 @@
                 <div class="timeline__header">
                   <p class="timeline__timeframe">July 2008 - June 2014</p>
                   <h3 class="item-title">YAPIS 1 Elementary School of Biak</h3>
-                  <!-- <h5>Frontend Developer</h5> -->
                 </div>
-                <!-- <div class="timeline__desc">
-                  <p>
-                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit
-                    dolor incididunt amet est occaecat nisi.
-                  </p>
-                </div> -->
               </div>
             </div>
           </div>
@@ -415,7 +392,7 @@
                 <p class="item-folio__cat">Web Design</p>
               </div>
               <div class="item-folio__caption">
-                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                <p>BLM NAMBAH PROJECT</p>
               </div>
             </div>
           </div> -->
@@ -434,7 +411,7 @@
                 <p class="item-folio__cat">Web Design</p>
               </div>
               <div class="item-folio__caption">
-                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                <p>BLM NAMBAH PROJECT</p>
               </div>
             </div>
           </div> -->
