--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           </p>
 
           <p class="section-desc">
-            I'm happy to connect, listen and help. Let's work together and build something awesome. Let's turn your idea to an even greater product.
+            I'm glad to do some project with others, let's work together and level up our skills, let's build the better version of ourself together.
             <a href="mailto:namikazeyoga2@gmail.com">Email Me</a>.
           </p>
         </div>
