--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           </p>
 
           <p class="section-desc">
-            I'm glad to do some project with others, let's work together and level up our skills, let's build the better version of ourself together.
+            I'm glad to do some projects with others, let's work together and level up our skills, and let's build a better version of ourselves together.
             <a href="mailto:namikazeyoga2@gmail.com">Email Me</a>.
           </p>
         </div>
